--- a/src/index.css
+++ b/src/index.css
@@ -1,49 +1,19 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: grey;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: .75em;
 }
-h1{
-  margin-top: 0;
+.bg-black{
+  background-color: black;
 }
-header {
-  padding: 15px;
-  background-color: orangered;
-
-}
-.header-title{
-  text-indent: 5%;
-  padding-bottom: 0px;
-}
-.header-subtitle{
-  text-indent: 5%;
-  padding-top: 0px;
-}
-.postcard{
-  margin: auto;
-  margin-bottom: 10px;
-  border: solid 1px;
-  border-radius: 5px;
-  width: 50%;
-  background-color: white;
-}
-.card-content{
-  display: inline-block;
-}
-.post-main{
-  padding: 5px;
-}
-.post-left-margin{
-  background-color: lightgrey;
-  text-align: center;
+.header-image{
+  height: 50px;
   width: 50px;
-  height: 100%;
+  position: relative;
+  top: -10px;
 }
-.post-header{
-  padding: 0;
-  margin: 0;
-  font-size: 14px;
+.header-content{
+  position: relative;
+  left: -40px;
 }
-
-
