--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ html, body {
 .bg-black{
   background-color: black;
 }
+.bg-background{
+  background-color: #ccc;
+}
 .header-image{
   height: 50px;
   width: 50px;
@@ -16,4 +19,15 @@ html, body {
 .header-content{
   position: relative;
   left: -40px;
+}
+.vertical-flip{
+  transform: rotate(180deg);
+}
+.plaintext-link, .plaintext-link:hover{
+  color: black;
+  text-decoration: none;
+}
+.modlist-link, .modlist-link:hover{
+  color: #FF4301;
+  text-decoration: none;
 }
