--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Verdana, Arial, Helvetica, sans-serif;
-  font-size: .75em;
+  font-size: .9em;
+
 }
 .bg-black{
   background-color: black;
@@ -24,7 +25,7 @@ html, body {
   transform: rotate(180deg);
 }
 .plaintext-link, .plaintext-link:hover{
-  color: black;
+  color: #1A1A1B;
   text-decoration: none;
 }
 .modlist-link, .modlist-link:hover{
@@ -33,4 +34,9 @@ html, body {
 }
 .bg-flairtext{
   background-color: #eeeeee;
+  font-size: .75em;
+}
+.icon-right{
+  position: relative;
+  right: 0px;
 }
