--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ html, body {
   padding: 0;
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: .9em;
-
 }
 .bg-black{
   background-color: black;
@@ -28,9 +27,19 @@ html, body {
   color: #FF4301;
   text-decoration: none;
 }
+.modlist-flairtext{
+  font-size: .75em;
+}
+.post-container:hover{
+  outline: 1px;
+  outline-style: solid;
+  outline-color: rgb(134, 134, 134);
+}
+.force-pointer:hover{
+  cursor: pointer;
+}
 .bg-flairtext{
   background-color: #eeeeee;
-  font-size: .75em;
 }
 .icon-right{
   position: relative;
@@ -46,33 +55,46 @@ html, body {
   box-shadow: 0 0px;
   border: 0px;
 }
+.reddit-button:active{
+  background-color: #CC3700;
+}
 .reddit-button:hover{
   opacity: .5;
-}
-.reddit-button:focus{
-  background-color: #CC3700;
+  text-decoration: none;
+  color: white;
 }
 .arrow-up-container{
   box-shadow: 0 0px;
   border: 0px;
-  color: gray;
+  background-color: #F8F9FA;
 }
 .arrow-up-container:hover{
   color: rgb(155, 0, 0);
+  background-color: #e4e4e4;
+}
+.arrow-up-container:active{
+  background-color: rgb(177, 177, 177);
 }
 .arrow-down-container{
   box-shadow: 0 0px;
   border: 0px;
-  color: gray;
+  background-color: #F8F9FA;
 }
 .arrow-down-container:hover{
   color: rgb(66, 66, 255);
+  background-color: #e4e4e4;
+}
+.arrow-down-container:active{
+  background-color: rgb(177, 177, 177);
 }
 .score-text{
   font-size: .75em;
   font-weight: 1000;
   font-family: Verdana, Arial, Helvetica, sans-serif;
   letter-spacing: -1px;
+}
+.post-header-text{
+  font-size: .75em;
 }
 .footer-menu-button{
   box-shadow: 0 0px;
@@ -99,4 +121,14 @@ html, body {
 .footer-drop-menu-item:hover{
   background-color: rgba(219, 241, 255, 0.877);
   color: black;
+}
+.modal-footer-icon{
+  font-size: 2.5em;
+  color:#6C757D;
+}
+.modal-footer-icon:hover{
+  color: #FF4301;
+}
+.modal-footer-icon:active{
+  color: #CC3700;
 }
