--- a/src/index.css
+++ b/src/index.css
@@ -116,10 +116,9 @@ html, body {
   width: 100px;
   color: gray;
   border: 1px solid rgb(110, 110, 110);
-  z-index: 10;
+  z-index: 2000;
   text-align: left;
-  position: relative;
-  top: 0px;
+  position: absolute;
 }
 .footer-drop-menu-item:hover{
   background-color: rgba(219, 241, 255, 0.877);
